// SISDAR — Sistem Informasi Jadwal Pelajaran dan Nilai Siswa
// SD Negeri 232 Maluku Tengah
// Terakhir disesuaikan dengan migration aplikasi: 29 Agustus 2026
// Dokumentasi DBML: https://dbml.dbdiagram.io/docs

Project SISDAR {
  database_type: 'MySQL'
  Note: 'ERD aplikasi SISDAR. Tabel cache dan queue Laravel tidak ditampilkan agar diagram berfokus pada autentikasi, akademik, aktivitas, dan hak akses.'
}

Table users {
  id bigint [pk, increment]
  name varchar [not null]
  username varchar [not null, unique]
  email varchar [unique, null]
  status varchar [not null, default: 'aktif', note: 'Nilai utama: aktif atau nonaktif']
  email_verified_at timestamp [null]
  last_login_at timestamp [null]
  password varchar [not null]
  remember_token varchar [null]
  created_at timestamp [null]
  updated_at timestamp [null]

  indexes {
    status
  }

  Note: 'Akun autentikasi untuk Admin, Guru, Siswa, dan Kepala Sekolah.'
}

Table password_reset_tokens {
  email varchar [pk]
  token varchar [not null]
  created_at timestamp [null]

  Note: 'Token reset password bawaan Laravel.'
}

Table sessions {
  id varchar [pk]
  user_id bigint [null, note: 'Relasi logis ke users; migration tidak membuat foreign key']
  ip_address varchar(45) [null]
  user_agent text [null]
  payload longtext [not null]
  last_activity integer [not null]

  indexes {
    user_id
    last_activity
  }
}

Table pengaturan_sekolah {
  id bigint [pk, increment]
  nama_sekolah varchar [not null]
  npsn varchar [null]
  alamat text [null]
  telepon varchar [null]
  email varchar [null]
  logo varchar [null]
  kepala_sekolah_user_id bigint [null]
  created_at timestamp [null]
  updated_at timestamp [null]

  Note: 'Identitas sekolah yang digunakan pada aplikasi dan laporan PDF.'
}

Table tahun_ajaran {
  id bigint [pk, increment]
  nama varchar [not null, unique, note: 'Contoh: 2026/2027']
  tanggal_mulai date [not null]
  tanggal_selesai date [not null]
  status varchar [not null, default: 'nonaktif']
  created_at timestamp [null]
  updated_at timestamp [null]

  indexes {
    status
  }
}

Table semester {
  id bigint [pk, increment]
  tahun_ajaran_id bigint [not null]
  nama varchar [not null, note: 'ganjil atau genap']
  tanggal_mulai date [not null]
  tanggal_selesai date [not null]
  status varchar [not null, default: 'nonaktif']
  created_at timestamp [null]
  updated_at timestamp [null]

  indexes {
    (tahun_ajaran_id, nama) [unique, name: 'semester_tahun_nama_unique']
    status
  }
}

Table guru {
  id bigint [pk, increment]
  user_id bigint [unique, null]
  nip varchar [unique, null]
  nuptk varchar [unique, null]
  nama_lengkap varchar [not null]
  jenis_kelamin varchar [null]
  tempat_lahir varchar [null]
  tanggal_lahir date [null]
  telepon varchar [null]
  alamat text [null]
  status varchar [not null, default: 'aktif']
  created_at timestamp [null]
  updated_at timestamp [null]

  indexes {
    nama_lengkap
    status
  }
}

Table siswa {
  id bigint [pk, increment]
  user_id bigint [unique, null]
  nis varchar [unique, null]
  nisn varchar [unique, null]
  nama_lengkap varchar [not null]
  jenis_kelamin varchar [null]
  tempat_lahir varchar [null]
  tanggal_lahir date [null]
  alamat text [null]
  status varchar [not null, default: 'aktif']
  created_at timestamp [null]
  updated_at timestamp [null]

  indexes {
    nama_lengkap
    status
  }
}

Table kelas {
  id bigint [pk, increment]
  tahun_ajaran_id bigint [not null]
  nama varchar [not null, note: 'Contoh: I A atau VI A']
  tingkat tinyint [not null, note: 'Tingkat kelas 1 sampai 6']
  wali_kelas_id bigint [null]
  status varchar [not null, default: 'aktif']
  created_at timestamp [null]
  updated_at timestamp [null]

  indexes {
    (tahun_ajaran_id, nama) [unique, name: 'kelas_tahun_nama_unique']
    status
  }
}

Table siswa_kelas {
  id bigint [pk, increment]
  siswa_id bigint [not null]
  kelas_id bigint [not null]
  status varchar [not null, default: 'aktif', note: 'Menyimpan histori penempatan siswa']
  created_at timestamp [null]
  updated_at timestamp [null]

  indexes {
    (siswa_id, kelas_id) [unique, name: 'siswa_kelas_unique']
    status
  }
}

Table mata_pelajaran {
  id bigint [pk, increment]
  kode varchar [unique, null]
  nama varchar [not null, unique]
  status varchar [not null, default: 'aktif']
  created_at timestamp [null]
  updated_at timestamp [null]

  indexes {
    status
  }
}

Table jam_pelajaran {
  id bigint [pk, increment]
  nama varchar [not null]
  jam_mulai time [not null]
  jam_selesai time [not null]
  urutan smallint [not null, unique, note: 'Diatur melalui drag-and-drop pada aplikasi']
  jenis varchar [not null, default: 'pelajaran']
  status varchar [not null, default: 'aktif']
  created_at timestamp [null]
  updated_at timestamp [null]

  indexes {
    status
  }
}

Table pengajaran {
  id bigint [pk, increment]
  semester_id bigint [not null]
  kelas_id bigint [not null]
  mata_pelajaran_id bigint [not null]
  guru_id bigint [not null]
  status varchar [not null, default: 'aktif']
  created_at timestamp [null]
  updated_at timestamp [null]

  indexes {
    (semester_id, kelas_id, mata_pelajaran_id, guru_id) [unique, name: 'pengajaran_unique']
    (semester_id, guru_id) [name: 'pengajaran_semester_guru_index']
    status
  }

  Note: 'Mendefinisikan seorang guru mengajar satu mata pelajaran pada kelas dan semester tertentu.'
}

Table jadwal_pelajaran {
  id bigint [pk, increment]
  pengajaran_id bigint [not null]
  hari varchar [not null]
  jam_pelajaran_id bigint [not null]
  created_at timestamp [null]
  updated_at timestamp [null]

  indexes {
    (pengajaran_id, hari, jam_pelajaran_id) [unique, name: 'jadwal_unique']
    (hari, jam_pelajaran_id) [name: 'jadwal_hari_jam_index']
    hari
  }

  Note: 'Bentrok guru dan kelas divalidasi oleh service aplikasi sebelum data disimpan.'
}

Table nilai_tugas {
  id bigint [pk, increment]
  pengajaran_id bigint [not null]
  siswa_id bigint [not null]
  bulan tinyint [not null, note: 'Rentang 1 sampai 12']
  minggu tinyint [not null, note: 'Rentang 1 sampai 4']
  nilai decimal(5,2) [null, note: 'Rentang 0 sampai 100; NULL berarti belum dinilai dan 0 adalah nilai sah']
  catatan text [null]
  dibuat_oleh bigint [null]
  created_at timestamp [null]
  updated_at timestamp [null]

  indexes {
    (pengajaran_id, siswa_id, bulan, minggu) [unique, name: 'nilai_tugas_unique']
    (bulan, minggu) [name: 'nilai_tugas_bulan_minggu_index']
  }
}

Table aktivitas {
  id bigint [pk, increment]
  user_id bigint [null]
  actor_name varchar [null]
  role varchar(50) [null]
  type varchar(40) [not null]
  subject_type varchar [null, note: 'Relasi polymorphic ke model yang diproses']
  subject_id bigint [null]
  description varchar [not null]
  route varchar [null]
  method varchar(10) [null]
  ip_address varchar(45) [null]
  properties json [null]
  created_at timestamp [null]
  updated_at timestamp [null]

  indexes {
    (subject_type, subject_id) [name: 'aktivitas_subject_index']
    (user_id, created_at) [name: 'aktivitas_user_created_index']
    (type, created_at) [name: 'aktivitas_type_created_index']
    created_at
  }

  Note: 'Mencatat aktivitas penting. Kolom user_agent telah dihapus pada migration optimasi.'
}

Table permissions {
  id bigint [pk, increment]
  name varchar [not null]
  guard_name varchar [not null]
  created_at timestamp [null]
  updated_at timestamp [null]

  indexes {
    (name, guard_name) [unique, name: 'permissions_name_guard_unique']
  }
}

Table roles {
  id bigint [pk, increment]
  name varchar [not null]
  guard_name varchar [not null]
  created_at timestamp [null]
  updated_at timestamp [null]

  indexes {
    (name, guard_name) [unique, name: 'roles_name_guard_unique']
  }
}

Table model_has_permissions {
  permission_id bigint [not null]
  model_type varchar [not null, note: 'Pada SISDAR umumnya App\\Models\\User']
  model_id bigint [not null, note: 'Polymorphic ID; tidak dibuat sebagai foreign key langsung']

  indexes {
    (permission_id, model_id, model_type) [pk, name: 'model_has_permissions_primary']
    (model_id, model_type) [name: 'model_has_permissions_model_index']
  }
}

Table model_has_roles {
  role_id bigint [not null]
  model_type varchar [not null, note: 'Pada SISDAR umumnya App\\Models\\User']
  model_id bigint [not null, note: 'Polymorphic ID; tidak dibuat sebagai foreign key langsung']

  indexes {
    (role_id, model_id, model_type) [pk, name: 'model_has_roles_primary']
    (model_id, model_type) [name: 'model_has_roles_model_index']
  }
}

Table role_has_permissions {
  permission_id bigint [not null]
  role_id bigint [not null]

  indexes {
    (permission_id, role_id) [pk, name: 'role_has_permissions_primary']
  }
}

// Relasi autentikasi dan profil
Ref pengaturan_kepala_sekolah: pengaturan_sekolah.kepala_sekolah_user_id > users.id
Ref guru_user: guru.user_id - users.id
Ref siswa_user: siswa.user_id - users.id
Ref aktivitas_user: aktivitas.user_id > users.id
Ref nilai_pembuat: nilai_tugas.dibuat_oleh > users.id

// Relasi periode dan kelas
Ref semester_tahun_ajaran: semester.tahun_ajaran_id > tahun_ajaran.id
Ref kelas_tahun_ajaran: kelas.tahun_ajaran_id > tahun_ajaran.id
Ref kelas_wali_guru: kelas.wali_kelas_id > guru.id
Ref siswa_kelas_siswa: siswa_kelas.siswa_id > siswa.id
Ref siswa_kelas_kelas: siswa_kelas.kelas_id > kelas.id

// Relasi pengajaran, jadwal, dan nilai
Ref pengajaran_semester: pengajaran.semester_id > semester.id
Ref pengajaran_kelas: pengajaran.kelas_id > kelas.id
Ref pengajaran_mata_pelajaran: pengajaran.mata_pelajaran_id > mata_pelajaran.id
Ref pengajaran_guru: pengajaran.guru_id > guru.id
Ref jadwal_pengajaran: jadwal_pelajaran.pengajaran_id > pengajaran.id
Ref jadwal_jam_pelajaran: jadwal_pelajaran.jam_pelajaran_id > jam_pelajaran.id
Ref nilai_pengajaran: nilai_tugas.pengajaran_id > pengajaran.id
Ref nilai_siswa: nilai_tugas.siswa_id > siswa.id

// Relasi role dan permission
Ref model_permission: model_has_permissions.permission_id > permissions.id
Ref model_role: model_has_roles.role_id > roles.id
Ref role_permission_permission: role_has_permissions.permission_id > permissions.id
Ref role_permission_role: role_has_permissions.role_id > roles.id

TableGroup autentikasi {
  users
  password_reset_tokens
  sessions
  pengaturan_sekolah
}

TableGroup akademik {
  tahun_ajaran
  semester
  guru
  siswa
  kelas
  siswa_kelas
  mata_pelajaran
  jam_pelajaran
  pengajaran
  jadwal_pelajaran
  nilai_tugas
}

TableGroup audit_dan_akses {
  aktivitas
  roles
  permissions
  model_has_roles
  model_has_permissions
  role_has_permissions
}
